--- a/intro_to_react/introdemo/src/index.css
+++ b/intro_to_react/introdemo/src/index.css
@@ -9,6 +9,15 @@ h1 {
   padding-top: 5px;
   font-size: 15px;
 }
+.success {
+  color: green;
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
 
 .error {
   color: red;
